[gd_scene load_steps=10 format=3 uid="uid://c3ssxuloxa0kc"]

[ext_resource type="Script" path="res://Scripts/slime.gd" id="1_54uvx"]
[ext_resource type="Texture2D" uid="uid://bcu4plq2jdxdr" path="res://Assets/sprites/slime_green.png" id="1_p86xt"]
[ext_resource type="PackedScene" uid="uid://b1xdvsmdxcr4c" path="res://Scenes/killzone.tscn" id="2_43ams"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jkdq6"]
atlas = ExtResource("1_p86xt")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kmmr"]
atlas = ExtResource("1_p86xt")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl46f"]
atlas = ExtResource("1_p86xt")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho4xb"]
atlas = ExtResource("1_p86xt")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_bofl4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkdq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kmmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl46f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho4xb")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2mc4"]
size = Vector2(10, 15)

[node name="slime" type="Node2D"]
script = ExtResource("1_54uvx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bofl4")
autoplay = "default"
frame = 2
frame_progress = 0.7235

[node name="Killzone" parent="." instance=ExtResource("2_43ams")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_u2mc4")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(7, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(-7, 0)

[node name="RayCastBelow" type="RayCast2D" parent="."]
position = Vector2(5, 5)
target_position = Vector2(3, 11)

[node name="RayCastBelow2" type="RayCast2D" parent="."]
position = Vector2(-5, 5)
target_position = Vector2(-2, 11)
